# Image-Recognition-App-Model

./: .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  Pipfile  README.md  image_classification.ipynb  pyproject.toml  pytest-report.xml  setup.py
.github/: build_and_deploy.yml
.github/workflows/: build.yml  build_and_deploy.yml  cicd.yml  deploy.yml  pipeline.yml
object_detection_model/: model.py
tests/: test_model.py
